@@ -13,6 +13,7 @@ Feature: Rails Integration
       require 'spec'
 
       Spork.prefork do
+        ENV["RAILS_ENV"] = "testeroni"
         $run_phase = :prefork
         require File.dirname(__FILE__) + '/../config/environment.rb'
       end
@@ -26,7 +27,6 @@ Feature: Rails Integration
         class << self
           def establish_connection
             ($loaded_stuff ||= []) << 'establish_connection'
-            puts "Database connection was automatically re-established!"
           end
         end
       end
@@ -36,6 +36,17 @@ Feature: Rails Integration
       class User < ActiveRecord::Base
         ($loaded_stuff ||= []) << 'User'
       end
+      """
+    And a file named "config/environments/testeroni.rb" with:
+      """
+      $testeroni_used = true
+      """
+    And a file named "config/database.yml" with:
+      """
+      testeroni:
+        adapter: sqlite3
+        database: db/testeroni.sqlite3
+        timeout: 5000
       """
     And a file named "app/helpers/application_helper.rb" with:
       """
@@ -53,15 +64,21 @@ Feature: Rails Integration
       """
         config.active_record.observers = :user_observer
       """
-    And a file named "spec/models/user_spec.rb" with:
+    And the following code appears in "config/routes.rb" after /^end/:
       """
-      describe User do
-        it "does absoluately nothing" do
+        ($loaded_stuff ||= []) << 'config/routes.rb'
+      """
+    And a file named "spec/did_it_work_spec.rb" with:
+      """
+      describe "Did it work?" do
+        it "checks to see if all worked" do
           Spork.state.should == :using_spork
+          RAILS_ENV.should == 'testeroni'
           $loaded_stuff.should include('establish_connection')
           $loaded_stuff.should include('User')
           $loaded_stuff.should include('UserObserver')
           $loaded_stuff.should include('ApplicationHelper')
+          $loaded_stuff.should include('config/routes.rb')
           puts "Specs successfully run within spork, and all initialization files were loaded"
         end
       end
@@ -73,9 +90,10 @@ Feature: Rails Integration
     Then the output should not contain "app/controllers/application.rb"
     Then the output should not contain "app/controllers/application_controller.rb"
     Then the output should not contain "app/controllers/application_helper.rb"
+    Then the output should not contain "config/routes.rb"
   
   Scenario: Running spork with a rails app and observers
   
     When I fire up a spork instance with "spork rspec"
-    And I run spec --drb spec/models/user_spec.rb 
+    And I run spec --drb spec/did_it_work_spec.rb 
     Then the output should contain "Specs successfully run within spork, and all initialization files were loaded"
