@@ -1,6 +1,2 @@
 class Spork::AppFramework::Unknown < Spork::AppFramework
-  def bootstrap_required?
-    true
-  end
-  
 end
