@@ -1,3 +1,8 @@
+ === Bugfixes
+ 
+ * Cucumber env.rb (and RSpec spec_helper.rb) are now able to set the environment via ENV['RAILS_ENV'] if they wish.
+ * Rails config/routes.rb is no longer cached
+
 == 0.5.1 2009-06-05
 
  === Bugfixes
